--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"moment": "^2.29.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-draggable": "^4.4.4",
 		"react-perfect-scrollbar": "^1.5.8",
 		"react-redux": "^7.2.6",
 		"react-router-dom": "^6.2.1",
